@@ -4,6 +4,7 @@
 New features
  - [core] can now invite attendees to exceptions only (#2561)
  - [web] display freebusy information of owner in appointment editor
+ - [web] register SOGo as a handler for the mailto scheme (#1223)
 
 Enhancements
  -
